@@ -22,7 +22,7 @@ TECH
    *. keep reviewing and updating the GameOverview.html doc
 
 NON-TECH
-   *. With the Scrimshaw skill, make bone armor and shield for the evil clerics.
+   *. Balance rand areas: forest areas are easiest, prison areas hardest, cook rooms,tinkerer rooms are really difficult, wardens and kings are great boss mobs, dragons easy
    *. A fireball type chant for Delvers or something, like Magma Cannon or Core Spike.
    *. Transcribe -as a spell, allowing a mage to transcribe a spell from one scroll to another scroll.
    *. Classes with insufficient unique skills: Charlatan (7), Alterer (9), Illusionist (10),  Ranger (11), Alterer (11), Evoker (11), Assassin (12), Paladin (12), 
