@@ -218,10 +218,12 @@ Targets    : Mobs, Items\n\r\
 Parameters : nothing, a level change + or -, a level %, or\n\r\
            : MIN=[NUM], MAX=[NUM], LEVELADD=[NUM], LEVELPCT=[PCT%],\n\r\
            : PLAYERSONLY=[true/false], PLAYERSNFOLS=[true/false]\n\r\
+           : ASMATERIAL=[RESOURCE]\n\r\
 Example    : \n\r\
 Example    : 10\n\r\
 Example    : 150%\n\r\
 Example    : MAX=20 MIN=5 LEVELADD=0 LEVELPCT=100% PLAYERSONLY=false\n\r\
+Example    : MAX=20 MIN=5 ASMATERIAL=IRON\n\r\
 Description: \n\r\
 When this property is on a mob, it makes the mob the same level as those in the \
 room with it, or as those who are fighting it.  The mob will only change, however, \
@@ -233,8 +235,9 @@ A parameter may be given to always adjust the level of the item up or down from 
 be multiplied by the level as a percentage, or a number of parameter variables like: \
 MIN to set a minimum level, MAX to set a maximum level, LEVELADD to add a fixed number \
 to the level, LEVELPCT to multiply a percentage by the level, PLAYERSONLY to limit \
-the level calculating mobs to players only, or PLAYERSNFOLS to limit the level \
-calculating mob to players or their followers only.
+the level calculating mobs to players only, PLAYERSNFOLS to limit the level \
+calculating mob to players or their followers only, and ASMATERIAL to change the \
+material of the item only for stat calculation purposes.
 
 PROP_LANGTRANSLATOR=\
 Property   : Prop_LangTranslator\n\r\
